--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ ENDIF()
 
 set(PIE_LINK_LIBRARIES pie_compiler pie_vm)
 
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
+
 ADD_SUBDIRECTORY(compiler)
 ADD_SUBDIRECTORY(vm)
 ADD_SUBDIRECTORY(vendor)
