--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -5,7 +5,7 @@ FIND_PACKAGE(FLEX REQUIRED)
 FIND_PACKAGE(BISON REQUIRED)
 
 IF(FLEX_FOUND)
-	FLEX_TARGET(Scanner pie.ll ${CMAKE_CURRENT_SOURCE_DIR}/lex.yy.cpp)
+	FLEX_TARGET(Scanner pie.ll ${CMAKE_CURRENT_SOURCE_DIR}/lex.yy.cpp COMPILE_FLAGS "-f -R")
 	BISON_TARGET(Parser pie.y ${CMAKE_CURRENT_SOURCE_DIR}/pie.tab.cpp)
 ENDIF(FLEX_FOUND)
 
