Restruct folder layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,12 @@ IF(APPLE)
     CMAKE_OSX_SYSROOT)
 ENDIF()
 
-set(PIE_LINK_LIBRARIES pie_compiler pie_vm)
+set(PIE_LINK_LIBRARIES pie_compiler pie_runtime)
 
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 
 ADD_SUBDIRECTORY(compiler)
-ADD_SUBDIRECTORY(vm)
+ADD_SUBDIRECTORY(runtime)
 ADD_SUBDIRECTORY(vendor)
 ADD_SUBDIRECTORY(main)
 
